deploy/k8s/infra/monitoring/headlamp/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-url
  namespace: kube-dashboard
  annotations:
    # Tells K3s to route this traffic through its built-in Traefik engine
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: headlamp.192.168.1.13.sslip.io  # Your custom local URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
